# python-minimal

./: MANIFEST.in  pyproject.toml  setup.py
package/: __init__.py
tests/: __init__.py
